tests/macro-tests/cases/widget_new/property_generic1.stderr
error[E0283]: type annotations needed
 --> cases/widget_new/property_generic1.rs:7:9
  |
7 |         value = 0;
  |         ^^^^^ cannot infer type for type parameter `T` declared on the method `value`
  |
  = note: cannot satisfy `_: VarValue`
note: required by a bound in `Toggle::value`
 --> $WORKSPACE/crates/zng-wgt-toggle/src/lib.rs
  |
  | pub fn value<T: VarValue>(child: impl IntoUiNode, value: impl IntoVar<T>) -> UiNode {
  |                 ^^^^^^^^ required by this bound in `Toggle::value`
